--- a/Views/Home/Modules.cshtml
+++ b/Views/Home/Modules.cshtml
@@ -2,10 +2,9 @@
     ViewData["Title"] = "Modules";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="container-List">
+<div class="main-content">
     <!-- Header -->
-    <div class="course-header">
+    <div class="course-header" style="justify-content:center">
         <div class="course-tabs">
             <div class="tab-item" data-tab="grades">Syllabus</div>
             <div class="tab-item active" data-tab="modules">Modules</div>
@@ -18,16 +17,14 @@
 
     <div class="tab-content active" id="modules-content">
         <div class="course-header">
-            <a href="Dashboard.html" class="back-button">
-                <span class="material-icons">arrow_back</span>
-                Back to Courses
-            </a>
-            <h1 class="course-title">Operating Systems</h1>
-            <p>By Mark Lee</p>
-            <div class="course-info">
-                <div class="info-item">
-                    <span class="material-icons">library_books</span>
-                    6 modules
+            <div>
+                <h1 class="course-title">Operating Systems</h1>
+                <p>By Mark Lee</p>
+                <div class="course-info">
+                    <div class="info-item">
+                        <span class="material-icons">library_books</span>
+                        6 modules
+                    </div>
                 </div>
             </div>
         </div>
