--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -69,9 +69,9 @@
 
                 <button type="submit" class="login-button">Sign In</button>
 
-                <div class="signup-link">
-                    Don't have an account? <a href="Registration.html">Sign up</a>
-                </div>
+                @* <div class="signup-link"> *@
+                @*     Don't have an account? <a href="Registration.html">Sign up</a> *@
+                @* </div> *@
             </form>
 
             @if (!string.IsNullOrEmpty(ViewData["ErrorMessage"]?.ToString()))
