--- a/Views/Admin/AdIndex.cshtml
+++ b/Views/Admin/AdIndex.cshtml
@@ -64,8 +64,9 @@
         </div>
     </div>
 
-    <div class="row mt-3">
+    <div class="row mt-4">
         <div class="col-6">
+            <h4 style="color:#3f3f6e" class="mb-4">Recently Added Students</h4>
             <div class="table-responsive">
                 @if (Model != null && Model.Count > 0)
                 {
@@ -105,7 +106,7 @@
             </div>
         </div>
         <div class="col-6">
-            teachers
+            <h4 style="color:#3f3f6e" class="mb-4">Recently Added Courses</h4>
         </div>
     </div>
 </div>
