--- a/Views/Admin/ManageUsers.cshtml
+++ b/Views/Admin/ManageUsers.cshtml
@@ -13,11 +13,13 @@
             </div>
             <div class="col-md-8">
                 <div class="user-section d-flex align-items-center justify-content-end flex-wrap">
-                    <div class="search-container flex-grow-1 me-3">
-                        <i class="fas fa-search search-icon"></i>
-                        <input type="text" class="search-input" placeholder="Search users..." />
-                        <button class="search-button">search</button>
-                    </div>
+                    <form method="get" action="@Url.Action("ManageUsers", "Admin")" class="d-flex">
+                        <div class="search-container flex-grow-1 me-3">
+                            <i class="fas fa-search search-icon"></i>
+                            <input type="text" class="search-input" placeholder="Search users..." name="searchQuery" />
+                            <button class="search-button">search</button>
+                        </div>
+                    </form>
                     <a class="btn btn-primary me-2" asp-area="" asp-controller="Admin" asp-action="AddUsers">
                         <i class="fas fa-user-plus" style="color: azure;"></i>
                     </a>
@@ -79,19 +81,44 @@
                 </div>
 
                 <!-- Pagination -->
+                @* <nav aria-label="Page navigation" class="mt-4"> *@
+                @*     <ul class="pagination justify-content-center"> *@
+                @*         <li class="page-item disabled"> *@
+                @*             <a class="page-link" href="#" tabindex="-1">Previous</a> *@
+                @*         </li> *@
+                @*         <li class="page-item active"><a class="page-link" href="#">1</a></li> *@
+                @*         <li class="page-item"><a class="page-link" href="#">2</a></li> *@
+                @*         <li class="page-item"><a class="page-link" href="#">3</a></li> *@
+                @*         <li class="page-item"> *@
+                @*             <a class="page-link" href="#">Next</a> *@
+                @*         </li> *@
+                @*     </ul> *@
+                @* </nav> *@
                 <nav aria-label="Page navigation" class="mt-4">
                     <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1">Previous</a>
-                        </li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
-                        </li>
+                        @if (ViewBag.CurrentPage > 1)
+                        {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("ManageUsers", new { searchQuery = ViewBag.SearchQuery, page = ViewBag.CurrentPage - 1 })">Previous</a>
+                            </li>
+                        }
+
+                        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                        {
+                            <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
+                                <a class="page-link" href="@Url.Action("ManageUsers", new { searchQuery = ViewBag.SearchQuery, page = i })">@i</a>
+                            </li>
+                        }
+
+                        @if (ViewBag.CurrentPage < ViewBag.TotalPages)
+                        {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("ManageUsers", new { searchQuery = ViewBag.SearchQuery, page = ViewBag.CurrentPage + 1 })">Next</a>
+                            </li>
+                        }
                     </ul>
                 </nav>
+
             </div>
         </div>
     </div>
