--- a/Views/Admin/AddUsers.cshtml
+++ b/Views/Admin/AddUsers.cshtml
@@ -23,6 +23,7 @@
     <div class="tab-content active" id="students-content">
         <form method="post" asp-action="AddUsers">
             <input type="hidden" asp-for="Role" value="Student" />
+            <input type="hidden" asp-for="Status" value="Active" />
             <div class="input-group">
                 <div class="input-field">
                     <i class="fas fa-user"></i>
